// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`actions should decrement should create decrement action 1`] = `
Object {
  "type": "@@counter/DECREMENT_COUNTER",
}
`;

exports[`actions should increment should create increment action 1`] = `
Object {
  "type": "@@counter/INCREMENT_COUNTER",
}
`;
